Thu Oct 27 14:57:33 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/socket/lib/socket.rb (UDPSocket#recvfrom_nonblock): [DOC] Remove
	  a false statement "If _maxlen_ is omitted, its default value is
	  65536." maxlen, the first parameter, cannot be omitted as the method
	  signature indicates. This hasn't changed ever since it was first
	  implemented.

Thu Oct 27 09:42:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_convert_to_integer): convert a fixable float to a
	  fixnum directly without the convesion method, as well as bignum
	  case.

	* object.c (rb_convert_to_integer): should not drop the converted
	  string.

Wed Oct 26 17:09:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_intern): use prefixed version macro
	  RUBY_CONST_ID_CACHE.

Wed Oct 26 11:28:25 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: added several entries which (if I remember correctly) are
	  added in a year.

Tue Oct 25 12:54:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_internal): follow the original class, not to loop
	  the prepended module.  [ruby-core:77591] [Bug #12832]

Mon Oct 24 10:52:17 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Test::Unit::Parallel#deal): update the
	  job status after a task finished, to show idling workers.

Mon Oct 24 10:51:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (Init_Complex): undefine methods inherited from
	  Comparable, because Complex does not have <=> method.
	  [Bug #12866]

	* class.c (rb_undef_methods_from): undefine methods defined in
	  super from klass.

Mon Oct 24 10:19:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (Init_Complex): undefine Complex#clamp, which does not
	  work like other Comparable methods, because Complex does not
	  have <=> method.  patched by Tim Peters <zomg.tim AT gmail.com>
	  in [ruby-core:77720].  [Bug #12866]

Sun Oct 23 11:41:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
